--- a/index.html
+++ b/index.html
@@ -7,60 +7,100 @@
     <title>Document</title>
     <style>
         .container {
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
-            gap: 8px;
+            align-items: center;
+            gap: .75rem;
             margin-left: 10%;
         }
 
         .logo {
-            height: 64px;
-            width: 58px;
-            margin-top: 30px;
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            display: block;
+            vertical-align: middle;
+            max-width: 100%;
+            height: auto;
+            width: 3.5rem;
         }
 
         .container h1 {
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            margin: 0;
+            font-family: Outfit, sans-serif;
+            font-weight: 600;
+            font-size: 3rem;
+            line-height: 1;
             color: hsl(0deg 0% 18.04%);
-            font-size: 48px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
 
         .container sub {
-            display: flex;
-            justify-content: center;
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            position: relative;
+            vertical-align: baseline;
+            top: -.5em;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size: .875rem;
+            line-height: 1.25rem;
             color: hsl(0deg 0% 18.04%);
-            font-weight: bold;
-            margin-top: 58px;
-            margin-right: 5px;
 
         }
 
         .toolbar {
             display: flex;
             flex-direction: row;
-            justify-content: flex-end;
+            justify-content: end;
             background-color: hsl(0deg 0% 18.04%);
-            padding: 8px;
+            margin: 12px;
             margin-left: 10%;
             margin-right: 10%;
         }
 
         .nav {
-            display: flex;
-            flex-direction: row;
-            gap: 64px;
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            padding: 12px;
         }
 
         .toolbar a {
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            text-decoration: inherit;
+            cursor: pointer;
+            padding-left: 2rem;
+            padding-right: 1rem;
+            font-family: Poppins, sans-serif;
             color: white;
-            text-decoration: none;
+        }
+        .toolbar a:nth-child(7) {
+            color: hsl(0deg 0% 18.04%);
+            font-family: Poppins, sans-serif;
         }
 
         .btn-admin {
-            padding: 8px;
-            background-color: hsl(36.07deg 100% 65.1%);
+            text-transform: none;
+            cursor: pointer;
             border-radius: 8px;
+            padding: 8px;
+            font-family: Poppins, sans-serif;
+            font-weight: 500;
+            background-color: hsl(36.07deg 100% 65.1%);
         }
 
         .pargraph-heading {
@@ -81,11 +121,19 @@
         }
 
         .btn {
-            display: flex;
-            flex-direction: row;
-            justify-content: start;
-            gap: 24px;
-            margin-left: 10%;
+            box-sizing: border-box;
+            border-width: 0;
+            border-style: solid;
+            border-color: #e5e7eb;
+            text-decoration: inherit;
+            width: 40%;
+            cursor: pointer;
+            border-radius: .5rem;
+            padding: .5rem .75rem;
+            text-align: center;
+            font-family: Poppins, sans-serif;
+            font-weight: 500;
+
         }
 
         .btn-dark {
@@ -108,13 +156,14 @@
         .img {
             display: flex;
             flex-direction: row;
-            justify-content:center;
+            justify-content: center;
             height: 350px;
             width: 350px;
             margin-top: -20%;
             margin-left: 66%;
         }
-       .footer {
+
+        .footer {
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -160,12 +209,11 @@
                 prices.</strong></p>
     </section>
     <div class="btn">
-        <div>
-            <a class="btn-dark" href="">Book a Demo</a>
-        </div>
-        <div>
-            <a class="btn-yellow" href="">Enroll Now</a>
-        </div>
+
+        <a class="btn-dark" href="">Book a Demo</a>
+
+        <a class="btn-yellow" href="">Enroll Now</a>
+
     </div>
     <div class="img">
         <img src="img1.svg" alt="">
