--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             display: flex;
             flex-direction: row;
             align-items: center;
-            gap: .75rem;
+            gap: 12px;
             margin-left: 10%;
         }
 
@@ -22,23 +22,22 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             display: block;
-            vertical-align: middle;
             max-width: 100%;
             height: auto;
-            width: 3.5rem;
+            width: 56px;
         }
 
         .container h1 {
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             margin: 0;
             font-family: Outfit, sans-serif;
             font-weight: 600;
-            font-size: 3rem;
+            font-size: 48px;
             line-height: 1;
             color: hsl(0deg 0% 18.04%);
         }
@@ -47,13 +46,11 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             position: relative;
-            vertical-align: baseline;
-            top: -.5em;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size: .875rem;
-            line-height: 1.25rem;
+            font-size: 16px;
+            line-height: 20px;
             color: hsl(0deg 0% 18.04%);
 
         }
@@ -72,7 +69,7 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             padding: 12px;
         }
 
@@ -80,11 +77,11 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             text-decoration: inherit;
             cursor: pointer;
-            padding-left: 2rem;
-            padding-right: 1rem;
+            padding-left: 32px;
+            padding-right: 16px;
             font-family: Poppins, sans-serif;
             color: white;
         }
@@ -94,7 +91,6 @@
         }
 
         .btn-admin {
-            text-transform: none;
             cursor: pointer;
             border-radius: 8px;
             padding: 8px;
@@ -124,12 +120,10 @@
             box-sizing: border-box;
             border-width: 0;
             border-style: solid;
-            border-color: #e5e7eb;
+            border-color: white;
             text-decoration: inherit;
             width: 40%;
             cursor: pointer;
-            border-radius: .5rem;
-            padding: .5rem .75rem;
             text-align: center;
             font-family: Poppins, sans-serif;
             font-weight: 500;
