clone webiste html, css

--- a/index5.html
+++ b/index5.html
@@ -86,7 +86,8 @@
         .content-discription {
             color: rgb(46 46 46);
         }
-        .content-discription h2{
+
+        .content-discription h2 {
             text-decoration: underline;
         }
 
@@ -120,6 +121,31 @@
             border-radius: 8px;
             border: 0px;
         }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            background-color: rgb(46 46 46);
+            color: white;
+            gap: 12px;
+            padding: 16px;
+        }
+
+        .title2 {
+            display: flex;
+            flex-direction: column;
+            justify-content: left;
+            ;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        .paragraph1 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    
     </style>
 </head>
 
@@ -166,6 +192,27 @@
             </div>
             <div class="content-img">
                 <img src="img1.svg" alt="">
+            </div>
+        </div>
+        <div class="container">
+            <div class="title2">
+                <span>Code Craft Learning</span>
+                <span>An MSME-recognized initiative for quality tech education & career readiness</span>
+            </div>
+            <div class="paragraph1">
+                <div class="title2">
+                    <span>Email</span>
+                    <span>enquiry@codecraftlearning.in</span>
+                </div>
+                <div class="title2">
+                    <span>Contact/Whatsapp</span>
+                    <span>+91 8971481633</span>
+                </div>
+                <div class="title2">
+                    <span>“The beautiful thing about learning is <br>
+                        that no one can take it away from you.”<br>
+                        — B.B. King</span>
+                </div>
             </div>
         </div>
     </div>
