--- a/firstwebsite/studio.Boutique.html
+++ b/firstwebsite/studio.Boutique.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <style>
         body{
+            background-image: url(studioboutique.png);
+            background-repeat: no-repeat;
+            background-size: cover;
             padding-left: 100px;
             padding-right: 100px;
         }
