--- a/firstwebsite/studio.Boutique.html
+++ b/firstwebsite/studio.Boutique.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        body {
             background-image: url(studioboutique.png);
             background-repeat: no-repeat;
             background-size: cover;
             padding-left: 100px;
             padding-right: 100px;
         }
+
         .toolbar {
             display: flex;
             flex-direction: row;
@@ -29,6 +30,16 @@
             padding: 8px;
             color: black;
         }
+
+        .main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding-top: 200px;
+            text-align: center;
+            font-size: 24px;
+            color: white;
+        }
     </style>
 </head>
 
@@ -42,6 +53,16 @@
             <span>Personal Trainer</span>
             <span>Log in</span>
             <span class="toolbar-btn">CALL US</span>
+        </div>
+    </div>
+    <div class="main">
+        <div>
+            <div>
+                <h2>FITNESS</h2>
+            </div>
+            <div>
+                <h1>STUDIO BOUTIQUE</h1>
+            </div>
         </div>
     </div>
 </body>
